apis/jobs/deploy/deploy.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: jobs
  labels:
    app: jobs
    service: jobs
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: jobs
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobs
  labels:
    app: jobs
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobs
      version: v1
  template:
    metadata:
      labels:
        app: jobs
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: skyhive
      containers:
        - name: jobs
          image: 596298976885.dkr.ecr.ca-central-1.amazonaws.com/jobs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobs
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /jobs/
            pathType: Prefix
            backend:
              service:
                name: jobs
                port:
                  number: 8080
